--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,6 +15,8 @@ jobs:
       run: rustup component add rustfmt
     - name: Build
       run: cargo doc --verbose
+    - name: Add index.html
+      run: echo '<meta http-equiv=refresh content=0;url=firestore_grpc/index.html>' > target/doc/index.html
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
