--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Install dependencies
       run: rustup component add rustfmt
     - name: Build
-      run: cargo doc --verbose
+      run: cargo doc --lib --verbose
     - name: Add index.html
       run: echo '<meta http-equiv=refresh content=0;url=firestore_grpc/index.html>' > target/doc/index.html
     - name: Deploy
