--- a/.github/workflows/update_proto.yml
+++ b/.github/workflows/update_proto.yml
@@ -3,9 +3,8 @@ name: Update proto
 on:
   schedule:
     - cron: "0 0 * * 0"
-
-env:
-  BRANCH_TO_PUSH: new-proto
+  push:
+    branches: [ master ]
 
 jobs:
   update-proro:
@@ -19,9 +18,27 @@ jobs:
         git config --global user.name "GitHub Actions"
         git config --global user.email "github@s.k-kachi.net"
         git config --global push.default current
+    - name: Cargo setup
+      run: |
+        rustup update
+        cargo install cargo-bump
+    - name: Update proto on release branch
+      run: |
         git fetch origin release
-        git checkout -B ${BRANCH_TO_PUSH} origin/release
-    - name: Update proto
-      run: bash update.sh
-    - name: Commit and push
-      run: git add . && git commit -m "Update proto" && git push -f || echo "Protos are up-to-date."
+        git checkout -B release origin/release
+        bash update.sh
+        git add .
+        git commit -m "Update proto" && echo "NEW_PROTOS_RELEASE=true" >> $GITHUB_ENV || echo "Protos are up-to-date."
+    - name: Push to release branch
+      if: ${{ env.NEW_PROTOS_RELEASE }}
+      run: |
+        cargo bump minor --git-tag
+        git push
+        git push origin --tags
+    - name: Update proto on master branch
+      run: |
+        git fetch origin master
+        git checkout -B master origin/master
+        bash update.sh
+        git add .
+        git commit -m "Update proto" && git push || echo "Protos are up-to-date."
